--- a/styles.css
+++ b/styles.css
@@ -1067,3 +1067,18 @@ figure {
 #loc_btn{
   width: 53%;
 }
+
+.posts_container{
+  margin-top: 12px ;
+}
+
+.post_wrapper{
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: 0px 0px 3px rgb(218, 218, 218);
+  padding: 10px 15px;
+}
+
+.post_wrapper p{
+  margin: 0;
+}
