--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@ figure {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
-
+html{
+  min-height: 100vh;
+}
 /*  **************************  BARRA PRINCIPAL */
 .nav {
   background-color: #ffffff;
@@ -19,7 +21,7 @@ figure {
 .body-space {
   background-color: #f0f2f5;
   width: 56.5%;
-  height: 100vh;
+  min-height: 100vh;
   margin-left: 22vw;
 }
 
@@ -1077,8 +1079,100 @@ figure {
   background-color: white;
   box-shadow: 0px 0px 3px rgb(218, 218, 218);
   padding: 10px 15px;
+  margin-bottom: 10px;
 }
 
 .post_wrapper p{
   margin: 0;
+  color: #333333;
+}
+.post_wrapper h4{
+  color:#333333;
+}
+.post_user-container{
+  display: flex;
+  
+}
+
+.post_user-picture{
+  width: 43px;
+  height: 43px;
+  overflow: hidden;
+  border-radius: 100px;
+  
+}
+.post_user-picture img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.post_user-details{
+  font-size: 14px;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  margin-left: 5px;
+}
+.post_user-name{
+  font-weight: 600;
+  margin: 0;
+}
+.post_user_name-details{
+  display: flex;
+}
+.arrow-right{
+  height: 10px; 
+  width: 10px;
+  transform:rotateZ(-90deg);
+  margin-top: 4px;
+  margin-left: 4px;
+}
+.post_time-details{
+  display: flex;
+  align-items: center;
+  
+}
+.group_post-logo{
+  height: 13px;
+  width: 13px;
+  margin-top: 3px;
+  margin-left: 4px;
+}
+
+.post_text-content{
+  font-size: 21px;
+}
+.post_text-container{
+  margin: 10px 0;
+}
+.likes_and_comments{
+  display: flex;
+  justify-content: space-between;
+}
+
+.likes_post-icon{
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+}
+.likes_post_container{
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+}
+.likes_post_container p{
+  margin-top: 2px;
+  margin-left: 5px;
+}
+
+.post_comments-container p{
+  font-size: 14px;
+  color: rgb(31, 31, 31);
+  cursor: pointer;
+}
+.post_comments-container p:hover{
+  text-decoration: underline;
+}
+.posts_background{
+  
 }
